--- a/back/package.json
+++ b/back/package.json
@@ -24,6 +24,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^5.12.14",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "react-cookie": "^4.1.1",
+    "socket.io": "^4.1.3"
   }
 }
