--- a/back/.gitignore
+++ b/back/.gitignore
@@ -13,10 +13,14 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+backend.env
+Dockerfile
+.dockerignore
 
 npm-debug.log*
 yarn-debug.log*
