--- a/back/package.json
+++ b/back/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
