--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "socket.io-client": "^4.1.3",
+    "swiper": "^6.8.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
