--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,7 @@
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
-    "react-leaflet": ">=3.1.0 <3.2.0 || ^3.2.1",
+    "react-leaflet": "^3.2.1",
     "@react-leaflet/core": ">=1.0.0 <1.1.0 || ^1.1.1",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
@@ -40,9 +40,9 @@
   },
   "browserslist": [
     ">0.2%",
-   "not dead",
-   "not op_mini all"
- ],
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
     "@types/leaflet": "^1.7.5"
   }
